force-app/main/default/objects/CMSFolder__c/CMSFolder__c.object-meta.xml
<CustomObject>
    <description>CMSForce Folders. Used to categorize Pages, PageTemplates and Web Forms</description>
    <label>Folder</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>CMSFolder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Folders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>