force-app/main/default/objects/CMSFolder__c/fields/Parent_CMSFolder__c.field-meta.xml
<CustomField>
    <fullName>Parent_CMSFolder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If this folder is a subfolder, please select it&#39;s parent here.</inlineHelpText>
    <label>Parent CMSFolder</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Type__c</field>
            <operation>equals</operation>
            <valueField>CMSFolder__c.Type__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CMSFolder__c</referenceTo>
    <relationshipLabel>Subfolders</relationshipLabel>
    <relationshipName>CMSFolder</relationshipName>
    <type>Lookup</type>
</CustomField>