force-app/main/default/objects/CMSFolder__c/fields/Return_URL__c.field-meta.xml
<CustomField>
    <fullName>Return_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Return_URL</label>
    <type>Url</type>
</CustomField>