force-app/main/default/objects/CMSFolder__c/fields/SavedByWebformeditor__c.field-meta.xml
<CustomField>
    <fullName>SavedByWebformeditor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SavedByWebformeditor</label>
    <type>Checkbox</type>
</CustomField>