force-app/main/default/objects/CMSFolder__c/fields/Site_Id__c.field-meta.xml
<CustomField>
    <fullName>Site_Id__c</fullName>
    <description>The Site that this folder belongs to.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Site Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>