force-app/main/default/objects/CMSFolder__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Page</fullName>
            </value>
            <value>
                <fullName>PageTemplate</fullName>
            </value>
            <value>
                <fullName>WebForm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>